@@ -1,6 +1,8 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2010, PHP 5.3.3 RC2
+- Fixed SplObjectStorage unserialization problems (CVE-2010-2225). (Stas)
+
 - Implemented FR #51295 (SQLite3::busyTimeout not existing). (Mark)
 
 - Fixed the mail.log ini setting when no filename was given. (Johannes)
